objects/BIGTEST_CustomObject_138__c.object
<CustomObject>
    <fields>
        <fullName>BIGTEST_CustomField_0__c</fullName>
        <label>BIGTEST_CustomField_0</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGTEST_CustomField_100__c</fullName>
        <label>BIGTEST_CustomField_100</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIGTEST_CustomField_101__c</fullName>
        <label>BIGTEST_CustomField_101</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>BIGTEST_CustomObject_138</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIGTEST_CustomObject_138</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>